--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "workbench.colorCustomizations": {
     "activityBar.background": "#f09be7",
+    "activityBar.activeBackground": "#f09be7",
     "activityBar.activeBorder": "#656f11",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
